tests/requests/invalid/003.py
from gunicorn.http.errors import InvalidRequestMethod
request = InvalidRequestMethod